Add doc-values aggregator for the count(v) aggregation.
It improves the performance of the global standard deviation aggregations.
See https://github.com/crate/crate/pull/10048 for more information